# octrees-coordenadas-polares-v2

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  DOCUMENTACION.md  Dockerfile  README.md  apuntes.md  bench_locality.bash  bench_memory.bash  bench_neighbors.bash  bench_neighbors_prueba.bash  bench_neighbors_reorders.bash  bench_neighbors_temp.bash  cesga_compile.sh  comandos_lastools  compile.sh  debug.sh  findlaslibcmakecesga.txt  indices.csv  indices.ipynb  job_submit.sh  test_compile.sh
cmake/: CMakeBuildExec.cmake  CMakeConfig.cmake  CMakeLibraries.cmake  CMakeLists.txt  CMakeSources.cmake  README.md
cmake/modules/: FindLASLIB.cmake  FindPCL.cmake  FindPapi.cmake  FindPicotree.cmake  README.md
examples/: CMakeLists.txt  README.md  example.cpp
inc/: README.md  main_options.hpp  util.hpp
inc/benchmarking/: README.md  benchmarking.hpp  build_log.hpp  enc_build_benchmarks.hpp  encoding_log.hpp  locality_benchmarks.hpp  memory_benchmarks.hpp  neighbor_benchmarks.hpp  papi_events.hpp  search_set.hpp  time_watcher.hpp
inc/encoding/: README.md  hilbert_encoder_2d.hpp  hilbert_encoder_3d.hpp  morton_encoder_2d.hpp  morton_encoder_3d.hpp  no_encoding.hpp  point_encoder.hpp  point_encoder_factory.hpp
inc/geometry/: README.md  box.hpp  point.hpp  point_containers.hpp  point_metadata.hpp
inc/kernels/: README.md  kernel_2d.hpp  kernel_3d.hpp  kernel_abstract.hpp  kernel_factory.hpp
inc/readers/: README.md  file_reader.hpp  file_reader_factory.hpp  handlers.hpp  las_file_reader.hpp  las_file_reader_parallel.hpp
inc/structures/: README.md  linear_octree.hpp  linear_octree.md  nanoflann.hpp  nanoflann_wrappers.hpp  neighbor_set.hpp  octree.hpp  octree_range_selector.hpp  octree_reordered.hpp  octree_types.hpp  pcl_wrappers.hpp  picotree_profiler.hpp  picotree_wrappers.hpp  unibn_octree.hpp
out_tfg_v3/pruebasCodigo/Lille_0/: Lille_0-2026-03-04-212926.csv  Lille_0-2026-03-04-234108.csv  Lille_0-2026-03-05-155037.csv  Lille_0-2026-03-05-155621.csv  Lille_0-2026-03-05-155754.csv  (+30 more)
plots/: README.md  constants.py  plots.py  plots_benchmarks.ipynb  plots_clouds.ipynb  plots_encodings.ipynb  plots_locality.ipynb  utils.py
results/: README.md
scripts/: README.md  install_laslib.sh  install_papi.sh  install_pcl.sh  install_picotree.sh
src/: README.md  main.cpp  main_options.cpp  octree.cpp  papi_events.cpp  time_watcher.cpp
tests/: CMakeLists.txt  README.md
tests/encoding/: README.md  test_encoders.cpp
tests/geometry/: README.md  test_geometry.cpp  test_points.cpp
tests/integration/: README.md  test_complex.cpp
tests/structures/: README.md  test_neighbor_set.cpp  test_octree.cpp  test_octree_advanced.cpp
(+49 files in other folders)
